Añadidas secciones de tipos de celdas, temas avanzados y secciones sobre ipython y notebooks por separado.

--- a/Introduccion-a-jupyter.ipynb
+++ b/Introduccion-a-jupyter.ipynb
@@ -24,6 +24,73 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jupyter en un entorno de trabajo que nos permite generar documentos\n",
+    "conocidos como **notebooks**. Estos notebooks estan constituidos por\n",
+    "una mezcla de código ejecutable, texto enriquecido, gráficas e imágenes y resultados.\n",
+    "En el siguiente artículo presentaremos brevemente su historia, veremos sus\n",
+    "\n",
+    "Antes se le conocía como iPython Notebook, nombre que refleja la evolución de este\n",
+    "sistema en el tiempo. Todo empezó con la creación de **iPython**, una consola extendida del python tradicional. Esta consola permitía hacer todo lo que la consola\n",
+    "de python tradicional, y muchas cosas más. Veremos añgunos ejemplos durante\n",
+    "la presentación.\n",
+    "\n",
+    "Sobre iPython se construyó un sistema de creación de **notebooks**, usando la misma\n",
+    "tecnología usada en la web: tenemos una aplicación cliente y un servidor, la aplicación cliente nos permite mezclar en un solo documento, el notebook, texto enriquecido, código ejecutable (inicialmente en python), presentacion de resultdos como tablas, imágenes, gráficas y formulas matemáticas con [Latex](https://es.wikipedia.org/wiki/LaTeX).\n",
+    "\n",
+    "Al haber realizado una separación tan clara entre la parte cliente y el servidor (nucleo\n",
+    "o **kernel** en la nomenclatura de Jupyter), se vio que con relativamente poco\n",
+    "trabajo se podía seperarar totalemente el concepto del notebook de la implementación en Python, es decir, que mediante el proceso de definir claramente la interfaz de comunicaciones\n",
+    "entre el notebook y el kernel, podiamos cambiar el kernel, es decir, que podiamos ejecutar no solo python, sino cualquier lenguaje que pudiera implementar esa interfaz.\n",
+    "\n",
+    "Los resultados no puedieron ser más rápidos, ya que rápidamente se implementaron\n",
+    "numerosos kernels. Dado que iPython notebook era usado sobre todo en entornos científicos\n",
+    "y muy especialmente en los nuevos campos de **Big Data**, **Minería de datos** y **Machine Learning**, se eligió el nuevo nombre **Jupyter** para representar que es un producto independiente, vinculado a Python pero de ninguna forma limitado a este. Jupyter se formo combinando los nombres de tres lenguajes ampliamente utilizados en la comunidad científica: **Julia**, **Python** y **R**.\n",
+    "\n",
+    "A continuación veremos una explicación en mayor detalle de iPython por un lado, el concepto de notebook por otro, y luego veremos algunos ejemplos sencillos de las capacidades del sistema. Para finalizar, mencionaremos algunas de las posibilidad de Jupyter que no podremos tratar aqui con el detalle que se merecen, por limitaciones de tiempo, pero que conviene al menos saber que existe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Primer ejercio: Arrancar Jupyter\n",
+    "\n",
+    "Vamos a abrir una terminal y teclearemos:\n",
+    "    \n",
+    "    jupyter notebook\n",
+    "    \n",
+    "Veremos que, tras una pausa más o menos breve, se abrirá el navegador, con la interfaz\n",
+    "de administración inicial, el **dashboard**, incluyendo un listado de los contenidos del directorio\n",
+    "donde hayamos arrancado el entorno.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Desde este panel de mando o *dashboard* podemos crear nuevos notebooks, o abrir alguno de los ya existente. Tambien podemos arrastar y soltar notebooks en formato `.ipynb` o código python `.py` y se añadirán an contenido del directorio. Si añadimos contenidos al sistema\n",
+    "de fichero, usando directamente el sistema operativo, esos cambios se verán reflejados\n",
+    "automáticamente.\n",
+    " \n",
+    "También podríams haber  abierto directamente un fichero `.ipynb`, sin tener que\n",
+    "pasar por el *dashboard*, incluyendo el nombre del fichero a continuación en el comando\n",
+    "con el que arrancamos Jupyter, por ejemplo, para abrir directamente el\n",
+    "documento `Introduccion-a-jupyter.ipynb`, ejecutariamos:\n",
+    "\n",
+    "    jupyter notebook Introduccion-a-jupyter.ipynb\n",
+    "   \n",
+    "Incluso podriamos no indicar la extensión `ipynb`; si no la incluimos\n",
+    "Jupyter la asumirá por defecto.\n",
+    "  \n",
+    "Una vez dentro de un notebook, siempre tendremos la opción de ir al menu **File** para\n",
+    "crear un nuevo notebook o abrir otro de los ya existentes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -32,8 +99,7 @@
    "source": [
     "### ¿Qué es iPython?\n",
     "\n",
-    "iPython es un interprete de Python aumentado. Es decir, que puede hacer todo lo que puede hacer el interprete\n",
-    "de python normal, y más cosas. Algunas de esas cosas son, entre otros:\n",
+    "iPython es un interprete de Python aumentado. Es decir, que puede hacer todo lo que puede hacer el interprete de python normal, y más cosas. Algunas de esas cosas son, entre otros:\n",
     "    \n",
     "    - Coloreado de sintaxis\n",
     "    - Acceso a comandos del sistema operativo\n",
@@ -46,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -190,7 +256,7 @@
        "Automagic is ON, % prefix IS NOT needed for line magics."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,6 +264,39 @@
    "source": [
     "%lsmagic%"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primer ejercicio - Celdas de texto\n",
+    "\n",
+    "Podemos user **markdown** para realizar formato \n",
+    "sencillo\n",
+    "\n",
+    "- **Negritas** e *itálicas*\n",
+    "- Enlaces: [Python Canarias](http://www.pythoncanarias.es/)\n",
+    "- nombres de variables: `iPython`\n",
+    "\n",
+    "O directamente HTML:\n",
+    "\n",
+    "<table>\n",
+    "<tr><th>A</th><th>B</th></tr>\n",
+    "<tr><td>1</td><td>2</td></tr>\n",
+    "<tr><td>3</td><td>4</td></tr>\n",
+    "</table>\n",
+    "\n",
+    "<img src=\"./img/clark-kent.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
