--- a/Primeros-pasos.ipynb
+++ b/Primeros-pasos.ipynb
@@ -1,20 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Una celda de texto\n",
+    "\n",
+    "<p>Podemos usar texto marcado con Html: <b>negrita</b> o <i>itálicas</i></p>\n",
+    "\n",
+    "O más rápido y simple, con MarkDown: **negrita** o *itálica*.\n",
+    "    \n",
+    "Listas:\n",
+    "    \n",
+    "- uno\n",
+    "- dos\n",
+    "- tres\n",
+    "\n",
+    "También podemos incluir formulas matemáticas con Latex:\n",
+    "\n",
+    "$ E &= mc^2  $                           \n",
+    "\n",
+    "m &= \\frac{m_0}{\\sqrt{1-\\frac{v^2}{c^2}}}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
    "source": [
     "pepe = 3\n",
     "print(pepe)"
