Añadidos ejemplo de formulas matemáticas

--- a/Primeros-pasos.ipynb
+++ b/Primeros-pasos.ipynb
@@ -16,11 +16,24 @@
     "- dos\n",
     "- tres\n",
     "\n",
-    "También podemos incluir formulas matemáticas con Latex:\n",
+    "También podemos incluir formulas matemáticas usando el subconjunto de Tex/LaTeX proporcoionado\n",
+    "por **MathJax**:\n",
     "\n",
-    "$ E &= mc^2  $                           \n",
+    "\\begin{equation*}\n",
+    "r = x^2 + y^2\n",
+    "\\end{equation*}\n",
     "\n",
-    "m &= \\frac{m_0}{\\sqrt{1-\\frac{v^2}{c^2}}}"
+    "\\begin{equation*}\n",
+    "m = \\frac{m_0}{\\sqrt{1-\\frac{v^2}{c^2}}}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "P(E)   = {n \\choose k} p^k (1-p)^{ n-k}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "$$\n",
+    "E = mc^2\n",
+    "$$                           \n"
    ]
   },
   {
