Pequeñas mejoras, a hora lee el numero si el navegador tienen Síntesis de voz

--- a/Sorteo.ipynb
+++ b/Sorteo.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -14,59 +16,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 120\n"
+      "1 .. 120\n"
      ]
     }
    ],
    "source": [
     "numeros = list(range(1, 121))\n",
-    "print(numeros[0], numeros[-1])"
+    "print(numeros[0], '..', numeros[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "def sorteo():\n",
-    "    n = random.choice(numeros)\n",
-    "    numeros.remove(n)\n",
+    "    random.shuffle(numeros)\n",
+    "    n = numeros.pop()\n",
     "    return HTML(\n",
     "        '<p>Ha resultado premiado el:<p>'\n",
-    "        '<p style=\"font-size:400%;\">{}</p>'\n",
+    "        '<h1 id=\"num\">{}</h1>'\n",
     "        '</p>Quedan <b>{}</b> números</p>'.format(n, len(numeros))\n",
     "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<p>Ha resultado premiado el:<p><p style=\"font-size:400%;\">84</p></p>Quedan <b>116</b> números</p>"
+       "<p>Ha resultado premiado el:<p><h1 id=\"num\">113</h1></p>Quedan <b>118</b> números</p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,12 +85,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "if ('speechSynthesis' in window) {\n",
+       "    var num = jQuery('#num').text();\n",
+       "    var msg = new SpeechSynthesisUtterance(num);\n",
+       "    var result = window.speechSynthesis.speak(msg);    \n",
+       "}\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "\n",
+    "if ('speechSynthesis' in window) {\n",
+    "    var num = jQuery('#num').text();\n",
+    "    var msg = new SpeechSynthesisUtterance(num);\n",
+    "    var result = window.speechSynthesis.speak(msg);    \n",
+    "}\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo de formula matemática"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ P(A \\mid B) = \\frac{P(B \\mid A) \\, P(A)}{P(B)} $$"
+   ]
   },
   {
    "cell_type": "code",
@@ -110,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
