Añadidos enlaces interesantes

--- a/Introduccion-a-jupyter.ipynb
+++ b/Introduccion-a-jupyter.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -14,6 +16,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -24,7 +28,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Jupyter en un entorno de trabajo que nos permite generar documentos\n",
     "conocidos como **notebooks**. Estos notebooks estan constituidos por\n",
@@ -53,7 +60,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Primer ejercio: Arrancar Jupyter\n",
     "\n",
@@ -69,7 +79,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Desde este panel de mando o *dashboard* podemos crear nuevos notebooks, o abrir alguno de los ya existente. Tambien podemos arrastar y soltar notebooks en formato `.ipynb` o código python `.py` y se añadirán an contenido del directorio. Si añadimos contenidos al sistema\n",
     "de fichero, usando directamente el sistema operativo, esos cambios se verán reflejados\n",
@@ -92,6 +105,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -114,7 +129,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -267,7 +284,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Primer ejercicio - Celdas de texto\n",
     "\n",
@@ -290,10 +310,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### Enlaces interesantes\n",
+    "\n",
+    "- Jupyter notebook extensions\n",
+    "  + <https://github.com/ipython-contrib/jupyter_contrib_nbextensions>\n",
+    "\n",
+    "- RISE: \"Live\" Reveal.js Jupyter/IPython Slideshow Extension\n",
+    "  + <https://github.com/damianavila/RISE>\n",
+    "\n",
+    "- Making publication ready python notebooks\n",
+    "  + <http://blog.juliusschulz.de/blog/ultimate-ipython-notebook>\n",
+    "\n",
+    "- Building a data science portfolio: Making a data science blog\n",
+    "  + <https://www.dataquest.io/blog/how-to-setup-a-data-science-blog/>\n",
+    "\n",
+    "- Advanced Jupyter Notebook Tricks — Part I\n",
+    "  + <https://blog.dominodatalab.com/lesser-known-ways-of-using-notebooks/>\n",
+    "\n",
+    "- Building Interactive Dashboards with Jupyter (Advanced Jupyter Notebook Tricks — Part II)\n",
+    "  + <https://blog.dominodatalab.com/interactive-dashboards-in-jupyter/>\n",
+    "\n",
+    "- Four Ways to Extend Jupyter Notebook\n",
+    "  + <http://mindtrove.info/4-ways-to-extend-jupyter-notebook/>\n",
+    "\n",
+    "- Using Shell Commands Effectively from IPython\n",
+    "  + <https://www.safaribooksonline.com/blog/2014/02/12/using-shell-commands-effectively-ipython/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -316,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
