--- a/005_bucles.ipynb
+++ b/005_bucles.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## El bucle for\n",
     "\n",
-    "La primra estructura de control que veremos es el **bucle for**, que nos permite realizar una serie de instrucciones varias veces. Los bucles for están muy vinculados a las secuecias como las listas, porque funcionan repitiendo unas determinadas instrucciones _para cada elemento de la secuencia_. Su forma general es:\n",
+    "La primera estructura de control que veremos es el **bucle for**, que nos permite realizar una serie de instrucciones varias veces. Los bucles for están muy vinculados a las secuecias como las listas, porque funcionan repitiendo unas determinadas instrucciones _para cada elemento de la secuencia_. Su forma general es:\n",
     "\n",
     "<code>\n",
     "**for** _variable_ **in** _secuencia_:\n",
