--- a/006_strings.ipynb
+++ b/006_strings.ipynb
@@ -577,6 +577,167 @@
    "source": [
     "Evidentemente, `[1:8:1]` es igual a `[1:8]`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operador in\n",
+    "\n",
+    "El operador `in` puede ser usado con cadenas de texto igual que con las listas. La expresión \n",
+    "se puede usar para saber si una determinada secuencia de caracteres se encuantra incluida dentro de otra, normalmente más grande.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "voltaire = '''No estoy de acuerdo con lo que dices, \n",
+    "pero hasta con la vida defenderé el derecho \n",
+    "que tienes de decir lo que piensas.\n",
+    "'''\n",
+    "print('pero' in voltaire)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('acuerdo' not in voltaire)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Otros métodos útiles\n",
+    "\n",
+    "- El método `startswith` nos sirve para saber si una cadena de textos empieza de una determinada subcadena.\n",
+    "\n",
+    "- El método `endswith` nos sirve para saber si una cadena de textos empieza con una determinada subcadena.\n",
+    "\n",
+    "- El método `upper` nos sirve para saber convertir una cadena de texto en otra\n",
+    "  igual excepto porque todas las letras están en mayúsculas.\n",
+    "  \n",
+    "- El método `lower` nos sirve para saber convertir una cadena de texto en otra\n",
+    "  igual excepto porque todas las letras están en minúsculas.\n",
+    "  \n",
+    "\n",
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "hola\n",
+      "HOLA\n"
+     ]
+    }
+   ],
+   "source": [
+    "cita_groucho = 'Nunca olvido una cara. Pero en su caso, haré gustoso una excepción'\n",
+    "print(cita_groucho.startswith('Nunca'))\n",
+    "print(cita_groucho.endswith('excepción.'))\n",
+    "print('Hola'.lower())\n",
+    "print('Hola'.upper())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tanto `upper` como `lower`, al igual que, por lo general, cualquier otro método que altere el contenido de la cadena de texto, no hacen ningún cambio en el valor original sino que devuelven una nueva cadena de texto modificada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Otros métodos `isX`\n",
+    "\n",
+    "los métodos que empiezan con `is` devuelven valores lógicos o booleanos, indicando si la cadena de texto correspondiente cumple o no ciertas características. Algunos de estos mñetodos son los siguientes:\n",
+    "\n",
+    "- El método `isupper` nos devuelve verdadero (`True`) si la cadena de texto\n",
+    "  sobre la que se aplica tienen todas las letras en mayúsculas.\n",
+    "  \n",
+    "- De forma análoga, `islower` devuelve verdadero si la cadena de texto\n",
+    "  sobre la que se aplica tienen todas las letras en minúsculas.\n",
+    "\n",
+    "- `isalpha()` devuelve verdadero si la cadena de texto contiene solo letras, sin ningún espacio.\n",
+    "\n",
+    "- `isalnum()` devuelve verdadero si la cadena consta solo de letras y/o números, sin ningún espacio.\n",
+    "\n",
+    "- `isdecimal()` devuelve verdadero si la cadena consta solo de dígitos, y no esta vacia.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"abc\" son todo minúsculas: True\n",
+      "\"ABC\" son todo mayúsculas: True\n",
+      "\"hola\" son solo letras: True\n",
+      "\"hola3\" son letras y números: True\n",
+      "\"2343\" sólo contiene dígitos: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\"abc\" son todo minúsculas:', 'abc'.islower())\n",
+    "print('\"ABC\" son todo mayúsculas:', 'ABC'.isupper())\n",
+    "print('\"hola\" son solo letras:', 'hola'.isalpha())\n",
+    "print('\"hola3\" son letras y números:', 'hola3'.isalnum())\n",
+    "print('\"2343\" sólo contiene dígitos:', '2343'.isdecimal())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Los métodos join y split\n",
+    "\n",
+    "Falta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
